--- a/ProAgil-App/src/app/app.component.html
+++ b/ProAgil-App/src/app/app.component.html
@@ -1,11 +1,7 @@
-<div style="text-align: center;">  
+<div class="container">  
   <h1>
-    welcome 456
-<br>
-    {{ title }}
+    Welcome to {{ title }}
   </h1>
-
-
-<app-eventos></app-eventos>
+  <app-eventos></app-eventos>
 </div>
 <router-outlet></router-outlet>
