--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,10 +1,40 @@
-<p>
-  eventos works!
-</p>
-<div *ngFor="let evento of eventos">
-  {{evento.Tema}}
-  <br>
-  {{evento.Local}}
-  <hr>
-<br></div>
+<!-- <form class="form-inline">
+  <div class="form-group mb-2">
+    <input type="text" class="form-control mr2" placeholder="buscar">
+    <button class="btn btn-outline-success">buscar</button>
+  </div>
+</form>
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th>#</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>             -->
 
+
+
+
+  <div *ngFor="let evento of eventos">
+  Tema: {{evento.tema}}
+  <br>
+  Local: {{evento.Local}}
+  <hr>
+  </div>
